--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "rollup -c -w",
     "test": "ava",
     "pretest": "",
-    "demo": "parcel example/index.html --out-dir demo"
+    "demo": "parcel example/index.html --out-dir demo --open"
   },
   "repository": {
     "type": "git",
@@ -44,7 +44,7 @@
     "parcel-bundler": "^1.10.3"
   },
   "dependencies": {
-    "mytoolkit": "^1.1.5",
+    "mytoolkit": "^1.1.7",
     "react": "^16.6.3"
   }
 }
