--- a/package.json
+++ b/package.json
@@ -34,14 +34,17 @@
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
     "ava": "1.0.0-rc.2",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.9.0",
+    "eslint-plugin-react": "^7.11.1",
+    "parcel-bundler": "^1.10.3",
     "react-dom": "^16.6.3",
     "rimraf": "^2.6.2",
     "rollup": "^0.67.3",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-uglify": "^6.0.0",
-    "parcel-bundler": "^1.10.3"
+    "rollup-plugin-uglify": "^6.0.0"
   },
   "dependencies": {
     "mytoolkit": "^1.1.8",
