--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-react": "^7.11.1",
     "parcel-bundler": "^1.10.3",
     "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1",
     "rimraf": "^2.6.2",
     "rollup": "^0.67.3",
     "rollup-plugin-babel": "^4.0.3",
