--- a/package.json
+++ b/package.json
@@ -35,20 +35,26 @@
     "@babel/preset-react": "^7.0.0",
     "ava": "1.0.0-rc.2",
     "babel-eslint": "^10.0.1",
+    "cssnano": "^4.1.7",
     "eslint": "^5.9.0",
     "eslint-plugin-react": "^7.11.1",
     "parcel-bundler": "^1.10.3",
-    "react-dom": "^16.6.3",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-nested": "^4.1.0",
+    "postcss-preset-env": "^6.4.0",
+    "postcss-simple-vars": "^5.0.1",
     "react-router-dom": "^4.3.1",
     "rimraf": "^2.6.2",
     "rollup": "^0.67.3",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-postcss": "^1.6.3",
     "rollup-plugin-uglify": "^6.0.0"
   },
   "dependencies": {
     "mytoolkit": "^1.1.8",
-    "react": "^16.6.3"
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
   }
 }
