--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "eslint-plugin-react": "^7.11.1",
     "parcel-bundler": "^1.10.3",
     "postcss-cssnext": "^3.1.0",
+    "postcss-easy-import": "^3.0.0",
+    "postcss-import": "^12.0.1",
     "postcss-nested": "^4.1.0",
     "postcss-preset-env": "^6.4.0",
     "postcss-simple-vars": "^5.0.1",
@@ -53,7 +55,7 @@
     "rollup-plugin-uglify": "^6.0.0"
   },
   "dependencies": {
-    "mytoolkit": "^1.1.10",
+    "mytoolkit": "^1.1.11",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
   }
