add history as a dependency

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "rollup-plugin-uglify": "^6.0.0"
   },
   "dependencies": {
+    "history": "^4.7.2",
     "mytoolkit": "^1.1.11",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
